--- a/CustomRPC/MainForm.pt.resx
+++ b/CustomRPC/MainForm.pt.resx
@@ -444,4 +444,7 @@ Para funcionar, ambos os numero têm de ter um numero maior que 0.</value>
   <data name="newPresetToolStripMenuItem.Text" xml:space="preserve">
     <value>Nova Pré-Definição</value>
   </data>
+  <data name="labelType.ToolTip" xml:space="preserve">
+    <value>Tipo de atividade para a presença.</value>
+  </data>
 </root>
