--- a/CustomRPC/UpdatePrompt.ka.resx
+++ b/CustomRPC/UpdatePrompt.ka.resx
@@ -128,13 +128,13 @@
     <value>209, 14</value>
   </data>
   <data name="labelQuestion.Text" xml:space="preserve">
-    <value>გსურთ რომ გადმოწეროთ განახლება?</value>
+    <value>გსურთ რომ გადმოწეროთ ეს განახლება?</value>
   </data>
   <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
     <value>207, 18</value>
   </data>
   <data name="checkBoxNeverNotify.Text" xml:space="preserve">
-    <value>არასდროს შეამოწმო განახლებები</value>
+    <value>აღარ შეამოწმო განახლებები</value>
   </data>
   <data name="labelVersionsText.Text" xml:space="preserve">
     <value>ახლანდელი ვერსია:
@@ -147,6 +147,6 @@
     <value>გამოტოვე ეს ვერსია</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>განახლება შესაძლებელია</value>
+    <value>განახლება ხელმისაწვდომია</value>
   </data>
 </root>
