--- a/CustomRPC/Strings.fr.resx
+++ b/CustomRPC/Strings.fr.resx
@@ -121,14 +121,14 @@
     <value>Erreur</value>
   </data>
   <data name="errorNoID" xml:space="preserve">
-    <value>Pas d'ID spécifié!</value>
+    <value>Pas d'ID spécifié !</value>
   </data>
   <data name="errorUpdateFailed" xml:space="preserve">
     <value>Une erreur est survenue lors du téléchargement ou de l'installation de la mise à jour.
-Cliquez sur "Oui" pour réessayer, ou "Non" pour la télécharger manuellement.</value>
+Cliquez sur "Oui" pour réessayer ou sur "Non" pour la télécharger manuellement.</value>
   </data>
   <data name="firstTimeRun" xml:space="preserve">
-    <value>Besoin d'aide ?</value>
+    <value>Besoin d'assistance ?</value>
   </data>
   <data name="firstTimeRunText" xml:space="preserve">
     <value>Souhaitez-vous ouvrir le manuel?
