--- a/CustomRPC/Strings.zh-Hant.resx
+++ b/CustomRPC/Strings.zh-Hant.resx
@@ -194,4 +194,20 @@
     <value>您確定要重新開始嗎？
 此項行為無法復原。</value>
   </data>
+  <data name="deleteSettings" xml:space="preserve">
+    <value>您想刪除應用程式的設定嗎？
+此操作無法撤銷。</value>
+  </data>
+  <data name="presenceTypePlaying" xml:space="preserve">
+    <value>正在玩</value>
+  </data>
+  <data name="presenceTypeListening" xml:space="preserve">
+    <value>正在聽</value>
+  </data>
+  <data name="presenceTypeWatching" xml:space="preserve">
+    <value>正在看</value>
+  </data>
+  <data name="presenceTypeCompeting" xml:space="preserve">
+    <value>競爭</value>
+  </data>
 </root>
