--- a/CustomRPC/UpdatePrompt.fr.resx
+++ b/CustomRPC/UpdatePrompt.fr.resx
@@ -134,7 +134,7 @@
     <value>236, 14</value>
   </data>
   <data name="labelQuestion.Text" xml:space="preserve">
-    <value>Souhaitez-vous télécharger la mise à jour?</value>
+    <value>Voulez-vous installer la mise à jour ?</value>
   </data>
   <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
     <value>189, 18</value>
@@ -143,8 +143,8 @@
     <value>Ne pas vérifier les mises à jour</value>
   </data>
   <data name="labelVersionsText.Text" xml:space="preserve">
-    <value>Version actuelle:
-Dernière version:</value>
+    <value>Version actuelle :
+Dernière version :</value>
   </data>
   <data name="buttonSkipUpdate.Size" type="System.Drawing.Size, System.Drawing">
     <value>132, 23</value>
